# bt_cs_soc_initiator_gate_control

./: .cproject  .project  .projectlinkstore  alg.c  app.c  app.h  ble_handler.c  bt_cs_soc_initiator_gate_control.pintool  bt_cs_soc_initiator_gate_control.slcp  bt_cs_soc_initiator_gate_control.slpb  bt_cs_soc_initiator_gate_control.slps  readme.md  trace.c  trace.h
.pdm/: uc.module.setup.CommonProjectPostBuild.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.componentSetup.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucTemplate.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj
.uceditor/: .bt_cs_soc_initiator_gate_control.cs_initiator.cedit
autogen/: ble_peer_manager_common.c  gatt_db.c  gatt_db.h  gen.properties  linkerfile.ld  sl_bluetooth.c  sl_bluetooth.h  sl_component_catalog.h  sl_event_handler.c  sl_event_handler.h  sl_iostream_handles.c  sl_iostream_handles.h  sl_iostream_init_eusart_instances.c  sl_power_manager_handler.c  sl_simple_led_instances.c  sli_psa_config_autogen.h
bt_cs_soc_initiator_gate_control_cmake/: CMakeLists.txt  CMakePresets.json  bt_cs_soc_initiator_gate_control.cmake  toolchain.cmake
config/: SEGGER_RTT_Conf.h  app_assert_config.h  app_config.h  ble_peer_manager_central_config.h  ble_peer_manager_common_config.h  ble_peer_manager_filter_config.h  cs_initiator_config.h  cs_initiator_display_config.h  cs_ras_client_config.h  cs_result_config.h  pin_config.h  psa_crypto_config.h  sl_bgapi_config.h  sl_bgapi_trace_config.h  sl_bluetooth_config.h  sl_bluetooth_connection_config.h  sl_bluetooth_cs_config.h  sl_board_control_config.h  sl_bt_host_adaptation_config.h  sl_btctrl_anchor_selection_config.h  sl_btctrl_config.h  sl_btctrl_scheduler_priority_config.h  sl_clock_manager_oscillator_config.h  sl_clock_manager_tree_config.h  sl_iostream_eusart_vcom_config.h  sl_mbedtls_config.h  sl_memory_manager_region_config.h  sl_mx25_flash_shutdown_eusart_config.h  sl_power_manager_config.h  sl_rail_util_aox_config.h  sl_rail_util_cs_antenna_offset_config.h  sl_rail_util_cs_gdcomp_config.h  sl_rail_util_pa_config.h  sl_rail_util_sequencer_config.h  sl_simple_button_btn0_config.h  sl_simple_button_btn1_config.h  sl_simple_button_config.h  sl_simple_led_led0_config.h  (+1 more)
(+78 files in other folders)
